--- a/town_hall_1/styles/c4_main.css
+++ b/town_hall_1/styles/c4_main.css
@@ -3,10 +3,22 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 }
+a:hover, a:focus {font-style: italic;}
 
 /* the styles for the header */
 header img {
 	float: left;
+}
+.shadow {text-shadow: 2px 2px 4px #800000;}
+header h2 {
+	font-size: 170%;
+	color: #800000;
+	text-indent: 30px;
+}
+header h3 {
+	font-size: 130%;
+	font-style: italic;
+	text-indent: 30px;
 }
 
 /* the styles for the main content */
@@ -25,3 +37,7 @@ main h3 {
 }
 
 /* the styles for the footer */
+p {text-align: center;}
+
+/*the styles for the root*/
+:root {--global-color-1: #800000; }
